[package]
name = "drone_attack"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../bevy" }
bevy_ninepatch_shader = { path = "../bevy_ninepatch_shader" }
rand = "0.8"
itertools = "0.10"
rodio = { version = "0.13", features = ["flac"] }